--- a/scss/partials/_fonts.scss
+++ b/scss/partials/_fonts.scss
@@ -54,9 +54,11 @@ $font-main: 'Raleway', sans-serif;
 $font-text: 'Lato', sans-serif;
 $font-text-strong: 'Roboto', sans-serif;
 $font-size-paragraph: 14px;
+$font-size-form: 16px;
 $font-heading-1: 36px;
 $font-heading-2: 18px;
 $font-size-text: 14px;
 $font-size-header-1: 50px;
 $font-size-header-2: 75px;
 $font-size-portfolio: 20px;
+$font-size-footer: 18px;
